--- a/vercel_style_preview.html
+++ b/vercel_style_preview.html
@@ -124,6 +124,13 @@
             -webkit-text-fill-color: transparent;
         }
 
+        [data-theme="dark"] .header h1 {
+            background: linear-gradient(180deg, #fff 0%, #ccc 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
         .header p {
             color: var(--text-secondary);
             font-size: 1rem;
@@ -203,6 +210,10 @@
 
         .tab-btn.active {
             color: #fff;
+        }
+
+        [data-theme="dark"] .tab-btn.active {
+            color: #000;
         }
 
         /* Main Content Card */
