--- a/vercel_style_preview.html
+++ b/vercel_style_preview.html
@@ -46,7 +46,7 @@
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: radial-gradient(300px circle at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.04) 40%, transparent 70%);
+            background: radial-gradient(100px circle at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.04) 40%, transparent 70%);
             pointer-events: none;
             z-index: -1;
             transition: opacity 0.3s ease;
@@ -236,6 +236,7 @@
             display: flex;
             gap: 12px;
             margin-bottom: 24px;
+            align-items: stretch; /* Ensure equal height */
         }
 
         .input-wrapper {
@@ -245,13 +246,21 @@
 
         .input {
             width: 100%;
-            padding: 12px 16px;
+            height: 48px; /* Match button height */
+            padding: 0 16px;
             padding-left: 40px; /* Space for icon */
             font-size: 1rem;
             border: 1px solid var(--border-color);
             border-radius: var(--radius);
             outline: none;
             transition: var(--transition);
+            background: var(--bg-color);
+            color: var(--text-primary);
+            box-sizing: border-box; /* Ensure consistent sizing */
+        }
+
+        .input::placeholder {
+            color: var(--text-secondary);
         }
 
         .input:focus {
@@ -294,11 +303,11 @@
 
         .btn-primary {
             background: var(--text-primary);
-            color: #fff;
+            color: var(--bg-color);
         }
 
         .btn-primary:hover {
-            background: #333;
+            background: var(--accent-hover);
             transform: translateY(-1px);
         }
 
@@ -338,13 +347,13 @@
         }
 
         .checkbox-label input[type="checkbox"]:checked {
-            background: var(--text-primary);
-            border-color: var(--text-primary);
+            background: var(--accent-color);
+            border-color: var(--accent-color);
         }
 
         .checkbox-label input[type="checkbox"]:checked::after {
             content: "✓";
-            color: white;
+            color: var(--bg-color);
             position: absolute;
             left: 50%;
             top: 50%;
@@ -365,7 +374,7 @@
             font-size: 0.9rem;
             color: var(--text-primary);
             outline: none;
-            background: #fff;
+            background: var(--bg-color);
             cursor: pointer;
             transition: var(--transition);
             box-shadow: var(--shadow-sm);
@@ -407,12 +416,12 @@
         .select-wrapper select option {
             padding: 8px 12px;
             color: var(--text-primary);
-            background: white;
+            background: var(--bg-color);
         }
 
         .select-wrapper select option:hover,
         .select-wrapper select option:checked {
-            background: #f5f5f5;
+            background: var(--border-color);
         }
 
         /* Results */
@@ -453,8 +462,8 @@
         }
 
         .song-item:hover {
-            background: #fafafa;
-            border-color: var(--border-color);
+            background: var(--border-color);
+            border-color: var(--text-secondary);
         }
 
         .song-cover {
@@ -547,7 +556,7 @@
 
         .api-input {
             flex: 1;
-            background: #fff;
+            background: var(--bg-color);
             border: 1px solid var(--border-color);
             color: var(--text-secondary);
             font-family: 'SF Mono', 'Monaco', 'Inconsolata', 'Fira Mono', 'Droid Sans Mono', 'Source Code Pro', monospace;
@@ -558,7 +567,7 @@
 
         .btn-copy {
             padding: 8px 16px;
-            background: #fff;
+            background: var(--bg-color);
             border: 1px solid var(--border-color);
             color: var(--text-primary);
             border-radius: 4px;
@@ -581,7 +590,7 @@
         }
 
         .btn-page {
-            background: #fff;
+            background: var(--bg-color);
             border: 1px solid var(--border-color);
             color: var(--text-primary);
             padding: 8px 16px;
